# RAG_PROTOTYPE

./: .env.example  .gitignore  README.md  plan_stuff.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_report_local_q4_jetson_multi.json  benchmark_report_local_q8_jetson_multi.json  benchmark_report_nim_jetson_multi.json  benchmark_summary_jetson_multi.json  queries.example.txt
src/edge_rag/: __init__.py  benchmark.py  cli.py  config.py  embeddings.py  evaluate.py  indexing.py  ingestion.py  preflight.py  rag.py  security.py  telemetry.py  types.py
src/edge_rag/inference/: __init__.py  base.py  cloud_provider.py  factory.py  local_provider.py
